# myrti

./: .gitignore  Cargo.toml  DESIGN.md  Dockerfile  Justfile  README.md  api.md  build.rs  dump_features_here.md  mediathingy.db
core/: build.rs
core/src/: lib.rs
core/src/catalog/: image_conversion_target.rs  storage_key.rs
core/src/core/: job.rs  scheduler.rs
core/vips_wrapper/: image_conversion.c  vips_wrapper.h
geocode/: Cargo.toml
geocode/migrations/: 20230920074521_initial.sql
geocode/src/: download.rs  geoname_schema.rs  ingest.rs  lib.rs
migrations/: 20230725183426_initial.sql
server/: .env  ARCHITECTURE.md  Cargo.toml  config.toml  devel.db  openapi.json
server/core/: Cargo.toml  diesel.toml
server/core/migrations/: 20230725183426_initial.sql
server/core/migrations/2024-02-01-170316_initial/: down.sql  up.sql
server/core/src/: config.rs  lib.rs  util.rs
server/core/src/actor/: actor.rs  image_conversion.rs  indexing.rs  misc.rs  mod.rs  simple_queue_actor.rs  thumbnail.rs  video_packaging.rs
server/core/src/catalog/: encoding_target.rs  image_conversion_target.rs  rules.rs  storage_key.rs
server/core/src/catalog/operation/: convert_image.rs  create_album_thumbnail.rs  create_thumbnail.rs  mod.rs  package_video.rs
server/core/src/core/: scheduler.rs  storage.rs
server/core/src/job/: geo_tagging_job.rs  image_conversion_job.rs  indexing_job.rs  thumbnail_job.rs  video_packaging_job.rs
server/core/src/model/: album.rs  asset.rs  asset_base.rs  asset_projections.rs  asset_root_dir.rs  asset_thumbnail.rs  data_dir.rs  failed_job.rs  id_types.rs  mod.rs  representation.rs  timeline_group.rs  util.rs
server/core/src/model/repository/: album.rs  album_thumbnail.rs  asset.rs  asset_root_dir.rs  asset_series.rs  config.rs  db.rs  duplicate_asset.rs  failed_job.rs  mod.rs  representation.rs  schema.rs  timeline.rs  timeline_group.rs  timeline_segment_idx.sql
server/core/src/model/repository/db_entity/: album.rs  album_item.rs  asset.rs  asset_root_dir.rs  asset_thumbnail.rs  asset_type.rs  failed_job.rs  mod.rs  representation.rs  timeline_group.rs
server/core/src/model/repository/test/: album.rs  asset.rs  asset_root_dir.rs  data_dir.rs  image_representation.rs  mod.rs  proptest_arb.rs  representation.rs  timeline.rs  timeline_group.rs  util.rs
server/core/src/processing/: hash.rs  indexing.rs  media_metadata.rs  mod.rs  process_control.rs  startup_self_check.rs
server/core/src/processing/image/: ffmpeg_snapshot.rs  image_conversion.rs  mod.rs  thumbnail.rs  vips_wrapper.rs
server/core/src/processing/test/: metadata.rs
server/core/src/processing/video/: ffmpeg.rs  ffmpeg_into_shaka.rs  mpd_generator.rs  shaka.rs  shaka_into_ffmpeg.rs  transcode.rs
server/core/src/processing/video/ffprobe/: command.rs  mod.rs  streams.rs  video_rotation.rs
server/core/vips_wrapper/: image_conversion.c  thumbnail.c  vips_wrapper.h
server/geocode/src/: ingest.rs  usearch_index.rs
server/migrations/: 20230725183426_initial.sql
server/server/: Cargo.toml
server/server/src/: app_state.rs  http_error.rs  lib.rs  mime_type.rs  openapi.rs  spa_serve_dir.rs
server/server/src/routes/: album.rs  asset.rs  asset_roots.rs  dash.rs  jobs.rs  mod.rs  photo_series.rs  timeline.rs  timeline_group.rs
server/server/src/schema/: album.rs  asset.rs  id_types.rs  job.rs  mod.rs  timeline.rs
server/src/: app_state.rs  config.rs  http_error.rs  lib.rs  main.rs  openapi.rs  routes.rs
server/src/api/routes/: album.rs  asset.rs  asset_roots.rs  jobs.rs  mod.rs
server/src/api/schema/: album.rs  asset.rs  asset_root_dir.rs  job.rs  mod.rs  timeline.rs
server/src/catalog/: encoding_target.rs  image_conversion_target.rs  mod.rs  rules.rs  storage_key.rs
server/src/catalog/operation/: convert_image.rs  create_thumbnail.rs  mod.rs  package_video.rs
server/src/core/: job.rs  mod.rs  monitor.rs  scheduler.rs  storage.rs
server/src/job/: geo_tagging_job.rs  image_conversion_job.rs  indexing_job.rs  mod.rs  thumbnail_job.rs  video_packaging_job.rs
server/src/model/: album.rs  asset.rs  asset_base.rs  asset_projections.rs  asset_root_dir.rs  data_dir.rs  id_types.rs  mod.rs  representation.rs
server/src/model/repository/: album.rs  asset.rs  asset_root_dir.rs  error.rs  mod.rs  representation.rs  timeline.rs
server/src/model/repository/db_entity/: album.rs  data_dir.rs  representation.rs
server/src/model/repository/test/: album.rs  asset.rs  asset_root_dir.rs  image_representation.rs  mod.rs  proptest_arb.rs  representation.rs
server/src/processing/: indexing.rs  media_metadata.rs  mod.rs
server/src/processing/image/: ffmpeg_snapshot.rs  image_conversion.rs  mod.rs  thumbnail.rs  vips_wrapper.rs
server/src/processing/video/: ffmpeg.rs  ffmpeg_into_shaka.rs  mpd_generator.rs  shaka.rs  shaka_into_ffmpeg.rs
server/src/processing/video/ffprobe/: command.rs  mod.rs  streams.rs  video_rotation.rs
server/src/routes/: asset.rs  asset_roots.rs  jobs.rs  mod.rs
server/src/schema/: asset.rs  asset_root_dir.rs  mod.rs  timeline.rs
server/vips_wrapper/: image_conversion.c  image_info.c  vips_wrapper.h
src/: app_state.rs  config.rs  http_error.rs  indexing.rs  indexing_job.rs  main.rs  model.rs  routes.rs  scheduler.rs  thumbnail.rs
src/api/: mod.rs
src/catalog/: encoding_target.rs  mod.rs  rules.rs
src/core/: data_dir_manager.rs  job.rs  mod.rs  monitor.rs  scheduler.rs  storage.rs
src/job/: dash_segmenting_job.rs  indexing_job.rs  mod.rs  thumbnail_job.rs
src/model/: asset.rs  asset_base.rs  asset_projections.rs  asset_root_dir.rs  asset_type.rs  data_dir.rs  failed_job.rs  id_types.rs  mod.rs  representation.rs  resource_file.rs  util.rs
src/processing/: indexing.rs  media_metadata.rs  mod.rs
src/repository/: asset.rs  asset_root_dir.rs  pool.rs
vips_wrapper/: image_conversion.c  thumbnail.c  vips_wrapper.h
web/: .gitignore  index.html  orval.config.cjs  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
web/locales/: de.json  en.json
web/src/: App.svelte  app.css  app.html  main.ts
(+136 files in other folders)
