[package]
name = "geocode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
futures = "0.3.28"
async-trait = "0.1.73"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version ="0.7.1", features = ["sqlite", "runtime-tokio", "chrono", "migrate"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
usearch = "2.5.0"
geojson = "0.24.1"
geo = "0.26.0"
csv-async = { version = "1.2.6", features = ["serde", "tokio"] }
cxx = "1.0.107"
reqwest = { version = "0.11.20", features = ["tokio-util", "stream"] }
async-compression = { version = "0.4.3", features = ["tokio", "deflate"] }
tempfile = "3.8.0"
zip = "0.6.6"
chrono = "0.4.31"
tracing = "0.1.37"
camino = "1.1.6"
thiserror = "1.0.48"
