[package]
name = "mediathingyrust"
version = "0.1.0"
edition = "2021"

[features]
mock-commands = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geocode = { path = "../geocode" }

async-trait = "0.1.73"
axum = { version = "0.6.19", features = ["tracing", "macros"] }
axum-extra = { version = "0.7.7", features = ["async-read-body"] }
camino = { version = "1.1.6", features = ["serde1"] }
chrono = { version = "0.4.28", features = ["serde"] }
claims = "0.7.1"
color-eyre = "0.6.2"
enum_dispatch = "0.3.12"
eyre = "0.6.8"
fasthash = "0.4.0"
futures = "0.3.28"
html-escape = "0.2.13"
itertools = "0.11.0"
lazy_static = "1.4.0"
notify = "6.0.1"
parse-size = { version = "1.0.0", features = ["std"] }
rayon = "1.7.0"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version ="0.7.1", features = ["sqlite", "runtime-tokio", "chrono", "migrate"] }
strum_macros = "0.25.2"
tempfile = "3.7.0"
thiserror = "1.0.49"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
toml = "0.7.6"
tower = { version = "0.4.13", features = ["tracing"] }
tower-http = { version = "0.4.3", features = ["trace", "request-id", "util", "fs", "cors"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-forest = { version = "0.1.6", features = ["ansi", "tokio", "serde", "env-filter"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
walkdir = "2.3.3"

[build-dependencies]
cc = "1.0.79"
pkg-config = "0.3.27"
bindgen = "0.66.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
