[package]
name = "core"
version = "0.1.0"
edition = "2021"

[features]
mock-commands = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# geocode = { path = "../geocode" }

async-trait = "0.1.73"
camino = { version = "1.1.6", features = ["serde1"] }
chrono = { version = "0.4.28", features = ["serde"] }
claims = "0.7.1"
color-eyre = "0.6.2"
enum_dispatch = "0.3.12"
eyre = "0.6.8"
fasthash = "0.4.0"
futures = "0.3.28"
itertools = "0.11.0"
lazy_static = "1.4.0"
notify = "6.0.1"
parse-size = { version = "1.0.0", features = ["std"] }
rayon = "1.7.0"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.104"
strum_macros = "0.25.2"
tempfile = "3.7.0"
thiserror = "1.0.49"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
toml = "0.7.6"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-forest = { version = "0.1.6", features = ["ansi", "tokio", "serde", "env-filter"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
walkdir = "2.3.3"
is_sorted = "0.1.1"
diesel = { version = "2.2.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
deadpool-diesel = { version = "0.5.0", features = ["sqlite", "tracing", "serde"] }
deadpool = { version = "0.10.0", features = ["rt_tokio_1"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
strum = { version = "0.26.3", features = ["derive"] }
nix = { version = "0.29.0", features = ["signal"] }
const_format = "0.2.32"

[build-dependencies]
cc = "1.0.79"
pkg-config = "0.3.27"
bindgen = "0.66.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
proptest = "1.3.1"
