[package]
name = "myrti"
version = "0.1.0"
edition = "2021"

[features]
default = ["opentelemetry"]
mock-commands = []
opentelemetry = [
  "dep:opentelemetry_sdk",
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry-semantic-conventions",
  "dep:tracing-opentelemetry"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# geocode = { path = "../geocode" }
core = { path = "../core" }

async-trait = "0.1.73"
axum = { version = "0.7.5", features = ["tracing", "macros", "json", "tokio", "query" ] }
axum-extra = { version = "0.9.3", features = ["async-read-body"] }
camino = { version = "1.1.6", features = ["serde1"] }
chrono = { version = "0.4.28", features = ["serde"] }
claims = "0.7.1"
color-eyre = "0.6.2"
enum_dispatch = "0.3.12"
eyre = "0.6.8"
fasthash = "0.4.0"
futures = "0.3.28"
html-escape = "0.2.13"
itertools = "0.11.0"
lazy_static = "1.4.0"
notify = "6.0.1"
parse-size = { version = "1.0.0", features = ["std"] }
rayon = "1.7.0"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.104"
strum_macros = "0.25.2"
tempfile = "3.7.0"
thiserror = "1.0.49"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
toml = "0.7.6"
tower = { version = "0.4.13", features = ["tracing"] }
tower-http = { version = "0.5.2", features = ["trace", "request-id", "util", "fs", "cors"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-forest = { version = "0.1.6", features = ["ansi", "tokio", "serde", "env-filter"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
walkdir = "2.3.3"
utoipa = { version = "4.2.0", features = ["axum_extras", "chrono"] }
utoipa-discover = { git = "https://github.com/tnibler/utoipa-discover", ref = "3dffbfc4c46bb30cd957ca4f997f88758a95ae28" }
clap = { version = "4.5.3", features = ["derive"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"], optional = true }
opentelemetry = { version = "0.22.0", optional = true }
opentelemetry-otlp = { version = "0.15.0", optional = true }
opentelemetry-semantic-conventions = { version = "0.14.0", optional = true }
tracing-opentelemetry = { version = "0.23.0", optional = true }
hyper-util = { version = "0.1.3", features = ["tokio", "server", "server-auto", "http1", ] }

[build-dependencies]
cc = "1.0.79"
pkg-config = "0.3.27"
bindgen = "0.66.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
proptest = "1.3.1"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "print-openapi"
path = "src/bin/print_openapi.rs"
